# AssistIQ-AI-Customer-Support-Simulator

./: .dockerignore  Dockerfile  README.md  inference.py  openenv.yaml  out2.txt  out3.txt  pyproject.toml  requirements.txt  smoke_output.txt  smoke_test.py
app/: __init__.py  env.py  knowledge_base.py  main.py  models.py  tasks.py
frontend/: index.html  package-lock.json
